Added preamble to query

--- a/HidingBehindWALS.ipynb
+++ b/HidingBehindWALS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Oyn2Hp-XhDxIZqoXLYhLRtlvvYzT1Wm9",
-      "authorship_tag": "ABX9TyPa0nt49hpJl1HeI78ThGai",
+      "authorship_tag": "ABX9TyNB0amUrN87r8XxyUyZYpm/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -341,213 +341,114 @@
     {
       "cell_type": "code",
       "source": [
-        "make_new_index = False\n",
-        "upsert_metadata = False\n",
-        "upsert_chapter_data = True\n",
+        "def setup_vectorstore(make_new_index = False,\n",
+        "                      upsert_metadata = False,\n",
+        "                      upsert_chapter_data = False,\n",
+        "                      index_name='starter-index',\n",
+        "                      split_type = 'json',\n",
+        "                      text_embedding = 'text-embedding-ada-002'):\n",
         "\n",
-        "index_name = 'starter-index'\n",
-        "split_type = 'json'\n",
+        "  pc = Pinecone(api_key=userdata.get('PINECONE_TOKEN'))\n",
+        "  embeddings = LangChainOpenAIEmbeddings(\n",
+        "      model =  text_embedding,\n",
+        "      openai_api_key=userdata.get('OPENAI_KEY'))\n",
         "\n",
-        "pc = Pinecone(api_key=userdata.get('PINECONE_TOKEN'))\n",
-        "embeddings = LangChainOpenAIEmbeddings(\n",
-        "    model =  'text-embedding-ada-002',\n",
-        "    openai_api_key=userdata.get('OPENAI_KEY'))\n",
+        "  if make_new_index:\n",
+        "    #https://docs.pinecone.io/docs/manage-indexes#create-a-pod-based-index\n",
+        "    pc.delete_index(index_name)\n",
+        "    pc.create_index(name=index_name, dimension=1536, metric=\"cosine\", spec=PodSpec(environment=\"gcp-starter\"))\n",
+        "  index = pc.Index(index_name)\n",
         "\n",
-        "if make_new_index:\n",
-        "  #https://docs.pinecone.io/docs/manage-indexes#create-a-pod-based-index\n",
-        "  pc.delete_index(index_name)\n",
-        "  pc.create_index(name=index_name, dimension=1536, metric=\"cosine\", spec=PodSpec(environment=\"gcp-starter\"))\n",
-        "index = pc.Index(index_name)\n",
-        "\n",
-        "if upsert_metadata:\n",
-        "  upsert_wals_data(index, embeddings)\n",
-        "  upsert_language_data(index, embeddings)\n",
+        "  if upsert_metadata:\n",
+        "    upsert_wals_data(index, embeddings)\n",
+        "    upsert_language_data(index, embeddings)\n",
         "\n",
         "\n",
-        "if upsert_chapter_data:\n",
-        "  chapter_metadata = load_chapter_metadata('/content/drive/MyDrive/WALS/chapter_metadata.csv')\n",
-        "  splitter = get_splitter(split_type)\n",
-        "  if split_type == 'text':\n",
-        "    text_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/', chapter_metadata, splitter, embeddings, subdirectory='chapters_html')\n",
-        "  elif split_type == 'html':\n",
-        "    html_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_html', chapter_metadata, splitter, embeddings)\n",
-        "  elif split_type == 'json':\n",
-        "    json_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_json', chapter_metadata, embeddings)"
+        "  if upsert_chapter_data:\n",
+        "    chapter_metadata = load_chapter_metadata('/content/drive/MyDrive/WALS/chapter_metadata.csv')\n",
+        "    splitter = get_splitter(split_type)\n",
+        "    if split_type == 'text':\n",
+        "      text_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/', chapter_metadata, splitter, embeddings, subdirectory='chapters_html')\n",
+        "    elif split_type == 'html':\n",
+        "      html_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_html', chapter_metadata, splitter, embeddings)\n",
+        "    elif split_type == 'json':\n",
+        "      json_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_json', chapter_metadata, embeddings)\n",
+        "\n",
+        "  return index, embeddings"
       ],
       "metadata": {
-        "id": "3Ic1-pR_6BFL",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "41d35d9d-b9a3-46bd-bad6-9873d621d13a"
+        "id": "3Ic1-pR_6BFL"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 chapter_1.json\n",
-            "2 chapter_10.json\n",
-            "3 chapter_100.json\n",
-            "4 chapter_101.json\n",
-            "5 chapter_102.json\n",
-            "6 chapter_103.json\n",
-            "7 chapter_104.json\n",
-            "8 chapter_105.json\n",
-            "9 chapter_106.json\n",
-            "10 chapter_107.json\n",
-            "11 chapter_108.json\n",
-            "12 chapter_109.json\n",
-            "13 chapter_11.json\n",
-            "14 chapter_110.json\n",
-            "15 chapter_111.json\n",
-            "16 chapter_112.json\n",
-            "17 chapter_113.json\n",
-            "18 chapter_114.json\n",
-            "19 chapter_115.json\n",
-            "20 chapter_116.json\n",
-            "21 chapter_117.json\n",
-            "22 chapter_118.json\n",
-            "23 chapter_119.json\n",
-            "24 chapter_12.json\n",
-            "25 chapter_120.json\n",
-            "26 chapter_121.json\n",
-            "27 chapter_122.json\n",
-            "28 chapter_123.json\n",
-            "29 chapter_124.json\n",
-            "30 chapter_125.json\n",
-            "31 chapter_126.json\n",
-            "32 chapter_128.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "33 chapter_129.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "34 chapter_13.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "35 chapter_130.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "36 chapter_131.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "37 chapter_132.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "38 chapter_133.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "39 chapter_134.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "40 chapter_135.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "41 chapter_136.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "42 chapter_137.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "43 chapter_139.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "44 chapter_14.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "45 chapter_140.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "46 chapter_141.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "47 chapter_142.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "48 chapter_143.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "49 chapter_144.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "50 chapter_15.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "51 chapter_16.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "52 chapter_17.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "53 chapter_18.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "54 chapter_19.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "55 chapter_2.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "56 chapter_21.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n",
-            "57 chapter_23.json\n",
-            "Pinecone exception occured. File is bigger than 2MB! Igoring.\n"
-          ]
-        }
-      ]
+      "execution_count": 63,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "vectorstore = LangChainPinecone(index, embeddings, text_key='text')"
+        "def setup_agent():\n",
+        "  index, embedding = setup_vectorstore()\n",
+        "  vectorstore = LangChainPinecone(index, embeddings, text_key='text')\n",
+        "\n",
+        "  llm = LangChainChatOpenAI(\n",
+        "      openai_api_key=userdata.get('OPENAI_KEY'),\n",
+        "      model_name='gpt-3.5-turbo',\n",
+        "      temperature=0.9\n",
+        "  )\n",
+        "\n",
+        "  agent = RetrievalQA.from_chain_type(\n",
+        "      llm=llm,\n",
+        "      retriever=vectorstore.as_retriever()\n",
+        "  )\n",
+        "  return agent"
       ],
       "metadata": {
         "id": "nmppztFPEbkg"
       },
-      "execution_count": 19,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "llm = LangChainChatOpenAI(\n",
-        "    openai_api_key=userdata.get('OPENAI_KEY'),\n",
-        "    model_name='gpt-3.5-turbo',\n",
-        "    temperature=0.9\n",
-        ")"
+        "class WALS():\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    self.agent = setup_agent()\n",
+        "\n",
+        "  def TalkToWALS(self, query):\n",
+        "    preamble = \"\"\"You are an expert on the World Atlas of Language Structures, also called WALS.\n",
+        "    Assume that any questions you are asked are referring to WALS, so if someone says Chatper 12\n",
+        "    they mean Chapter 12 in WALS, if they ask about verbal morphology they really mean what does\n",
+        "    WALS say about verbal morphology. Act like a helpful librarian who knows about WALS.\"\"\"\n",
+        "    response = self.agent.invoke('\\n'.join([preamble, query]))\n",
+        "    print(response['result'])\n"
       ],
       "metadata": {
-        "id": "h083MvTuTQqy"
+        "id": "MtrTSBqwFFDt"
       },
-      "execution_count": 20,
+      "execution_count": 61,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "qa = RetrievalQA.from_chain_type(\n",
-        "    llm=llm,\n",
-        "    retriever=vectorstore.as_retriever()\n",
-        ")"
+        "wals = WALS()\n",
+        "wals.TalkToWALS('Which chapter is about velar nasals?')"
       ],
       "metadata": {
-        "id": "PPVmJN1yhoZC"
-      },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "s1kELVjnBKIs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "preamble = \"\"\"You are an expert on the World Atlas of Language Structures, also called WALS.\n",
-        "Assume that any questions you are asked are referring to WALS, so if someone says Chatper 12\n",
-        "they mean Chapter 12 in WALS, if they ask about verbal morphology they really mean what does\n",
-        "WALS say about verbal morphology. Act like a helpful librarian who knows about WALS.\"\"\"\n",
-        "query = 'Help me find information about velar nasals'\n",
-        "response = qa.invoke('\\n'.join([preamble, query]))\n",
-        "print(response['result'])"
-      ],
-      "metadata": {
-        "id": "y7FXD_xATmPm",
+        "id": "PPVmJN1yhoZC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff3b5235-f379-4507-ad18-510bffb72895"
+        "outputId": "cf49e918-52ed-4599-c3f5-a2eda0a73284"
       },
-      "execution_count": 56,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Chapter 10 of the World Atlas of Language Structures (WALS) is titled \"The Velar Nasal\" authored by Gregory D.S. Anderson. This chapter focuses on the linguistic subfield of phonology. If you are looking for information specifically about velar nasals in language structures, Chapter 10 of WALS would be a good place to start.\n"
+            "Chapter 10 of the World Atlas of Language Structures (WALS) is about the velar nasal. The specific title of Chapter 10 is \"The Velar Nasal,\" written by Gregory D.S. Anderson, focusing on this particular phonological feature.\n"
           ]
         }
       ]
