Updated preamble, changed import structure

--- a/TalkingToWALS.ipynb
+++ b/TalkingToWALS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWSbYRp511JNsdgbd5cEl3",
+      "authorship_tag": "ABX9TyPMpx9Bgo9OBMmJGemJ95hj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,13 +40,13 @@
       "metadata": {
         "id": "7SKJgHx3NdzU"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py\n"
+        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py"
       ],
       "metadata": {
         "id": "pVn116QwLPpO"
@@ -58,37 +58,35 @@
       "cell_type": "code",
       "source": [
         "import HidingBehindWALS as wals\n",
-        "agent = wals.TalkToWALS()"
+        "agent = wals.WALS()"
       ],
       "metadata": {
         "id": "iDxQcr7zOkuo"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {
         "id": "j-vmVrb3CDvC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e598a523-fc5c-4432-a200-b544c6f160a1"
+        "outputId": "af0c78d9-36ec-44c7-e083-e703fbc9939f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "In the World Atlas of Language Structures (WALS), Chapter 10 titled \"The Velar Nasal\" authored by Gregory D.S. Anderson, it is noted that most languages in the sample for this study have non-iconic reciprocal constructions. This information provides insight into the prevalence of certain linguistic features in African languages as represented in the WALS sample.\n"
+            "The chapter in WALS that discusses velar nasals is Chapter 10, titled \"The Velar Nasal.\" This chapter is authored by Gregory D.S. Anderson and falls under the linguistic subfield of Phonology. It provides insights into the use and distribution of velar nasals in various languages.\n"
           ]
         }
       ],
       "source": [
-        "query = 'Tell me something interesting about African languages in WALS'\n",
-        "response = agent.invoke(query)\n",
-        "print(response['result'])"
+        "agent.TalkToWALS('Tell me about velar nasals')"
       ]
     }
   ]
