Simplified code blocks in notebook

--- a/TalkingToWALS.ipynb
+++ b/TalkingToWALS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMpx9Bgo9OBMmJGemJ95hj",
+      "authorship_tag": "ABX9TyMaXTtelO1PR2cIWQi+VtLm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,10 @@
         "    tiktoken \\\n",
         "    pinecone-client \\\n",
         "    langchain-openai \\\n",
-        "    langchain-pinecone"
+        "    langchain-pinecone\n",
+        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py\n",
+        "import HidingBehindWALS as wals\n",
+        "agent = wals.WALS()"
       ],
       "metadata": {
         "id": "7SKJgHx3NdzU"
@@ -45,48 +48,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py"
-      ],
-      "metadata": {
-        "id": "pVn116QwLPpO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import HidingBehindWALS as wals\n",
-        "agent = wals.WALS()"
-      ],
-      "metadata": {
-        "id": "iDxQcr7zOkuo"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 14,
       "metadata": {
         "id": "j-vmVrb3CDvC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af0c78d9-36ec-44c7-e083-e703fbc9939f"
+        "outputId": "af665e2d-231e-45dc-af00-dbe8d024ddcd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The chapter in WALS that discusses velar nasals is Chapter 10, titled \"The Velar Nasal.\" This chapter is authored by Gregory D.S. Anderson and falls under the linguistic subfield of Phonology. It provides insights into the use and distribution of velar nasals in various languages.\n"
+            "Chapter 21 of the World Atlas of Language Structures (WALS) is titled \"Fusion of Selected Inflectional Formatives\" and is authored by Balthasar Bickel & Johanna Nichols. This chapter delves into the fusion of inflectional formative elements in languages, particularly focusing on how certain morphemes are combined. It provides insights into how languages structure and combine these particular elements, shedding light on linguistic diversity in this area.\n"
           ]
         }
       ],
       "source": [
-        "agent.TalkToWALS('Tell me about velar nasals')"
+        "agent.TalkToWALS('Give me a summary of Chapter 21')"
       ]
     }
   ]
