Adding prechunked html files

--- a/HidingBehindWALS.ipynb
+++ b/HidingBehindWALS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Oyn2Hp-XhDxIZqoXLYhLRtlvvYzT1Wm9",
-      "authorship_tag": "ABX9TyNB0amUrN87r8XxyUyZYpm/",
+      "authorship_tag": "ABX9TyO516qGNMQs/RTgWvccZN2a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,12 +24,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jsmackie/TalkingToWALS/blob/mainline/HidingBehindWALS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jsmackie/TalkingToWALS/blob/flask_app/HidingBehindWALS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VpMvHAYRQf9N",
         "colab": {
@@ -66,7 +66,8 @@
         "    tiktoken \\\n",
         "    pinecone-client \\\n",
         "    langchain-openai \\\n",
-        "    langchain-pinecone"
+        "    langchain-pinecone \\\n",
+        "    bs4"
       ]
     },
     {
@@ -77,6 +78,8 @@
         "from uuid import uuid4\n",
         "\n",
         "import tiktoken\n",
+        "\n",
+        "from bs4 import BeautifulSoup\n",
         "\n",
         "from google.colab import userdata, drive\n",
         "\n",
@@ -92,7 +95,7 @@
       "metadata": {
         "id": "QCvpIbFUu5NN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +108,7 @@
       "metadata": {
         "id": "gdRNyCSLDI1A"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +129,7 @@
       "metadata": {
         "id": "B6ojEvRgJ7OC"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +164,7 @@
       "metadata": {
         "id": "qOyU15H3tov7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +197,30 @@
       "metadata": {
         "id": "acB4OJyb7Uiw"
       },
-      "execution_count": 6,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def html_prechunked_create_and_upsert_vectors(index, path, chapter_metadata, embeddings):\n",
+        "    for j, file in enumerate(os.listdir(path)):\n",
+        "      with open(file, encoding='utf-8') as f:\n",
+        "        text = f.read()\n",
+        "      chunks = text.split('\\n-----\\n')\n",
+        "      ids = [str(uuid4()) for _ in range(len(texts))]\n",
+        "      metadata = chapter_metadata[j]\n",
+        "      embeds = embeddings.embed_documents([chunk for chunk in chunks])\n",
+        "      record_metadatas = [{\"chunk\": j,\n",
+        "                             \"text\": chunk,\n",
+        "                             **metadata}\n",
+        "                              for (j, split) in enumerate(html_splits)]\n",
+        "      index.upsert(vectors=zip(ids, embeds, record_metadatas))"
+      ],
+      "metadata": {
+        "id": "G5iiUsEne_T2"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +259,7 @@
       "metadata": {
         "id": "0eGMOtWJZvyo"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +280,7 @@
       "metadata": {
         "id": "bfLN1SomhnZ5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +320,7 @@
         "    vector = [{\n",
         "      \"id\":str(uuid4()),\n",
         "      \"values\": embeds[0],\n",
-        "      \"metadata\": {\"topic\": f\"Data about the {family} family\"}\n",
+        "      \"metadata\": {\"topic\": f\"Data about the {family} family\"},\n",
         "      \"text\": full_text,\n",
         "    }]\n",
         "\n",
@@ -303,7 +329,7 @@
       "metadata": {
         "id": "SoBlxly8aDkz"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +361,7 @@
       "metadata": {
         "id": "1qKaLimIBis1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,13 +399,15 @@
         "      html_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_html', chapter_metadata, splitter, embeddings)\n",
         "    elif split_type == 'json':\n",
         "      json_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_json', chapter_metadata, embeddings)\n",
+        "    elif split_type == 'html_prechunk':\n",
+        "      html_prechunked_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/html_chunks', chapter_metadata, embeddings)\n",
         "\n",
         "  return index, embeddings"
       ],
       "metadata": {
         "id": "3Ic1-pR_6BFL"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,7 +432,7 @@
       "metadata": {
         "id": "nmppztFPEbkg"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -426,7 +454,7 @@
       "metadata": {
         "id": "MtrTSBqwFFDt"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +470,7 @@
         },
         "outputId": "cf49e918-52ed-4599-c3f5-a2eda0a73284"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
