--- a/HidingBehindWALS.ipynb
+++ b/HidingBehindWALS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Oyn2Hp-XhDxIZqoXLYhLRtlvvYzT1Wm9",
-      "authorship_tag": "ABX9TyNB0amUrN87r8XxyUyZYpm/",
+      "authorship_tag": "ABX9TyPr3d/HYFwEg/lSVrLbQvIP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,32 +29,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VpMvHAYRQf9N",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b7718c9-d1ba-43e0-e97c-997fd6451db5"
+        "outputId": "9656d97b-8853-4cf7-b667-fbb1050eb09a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m52.2/52.2 kB\u001b[0m \u001b[31m983.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m816.1/816.1 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m25.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.4/207.4 kB\u001b[0m \u001b[31m22.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m29.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m70.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m246.4/246.4 kB\u001b[0m \u001b[31m16.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m226.7/226.7 kB\u001b[0m \u001b[31m25.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.4/49.4 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m8.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.8/77.8 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m52.0/52.0 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m807.5/807.5 kB\u001b[0m \u001b[31m13.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m48.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.0/211.0 kB\u001b[0m \u001b[31m25.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m64.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m75.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m256.9/256.9 kB\u001b[0m \u001b[31m28.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.6/66.6 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m227.4/227.4 kB\u001b[0m \u001b[31m25.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.4/49.4 kB\u001b[0m \u001b[31m6.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m138.5/138.5 kB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.8/77.8 kB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -92,7 +93,7 @@
       "metadata": {
         "id": "QCvpIbFUu5NN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +106,7 @@
       "metadata": {
         "id": "gdRNyCSLDI1A"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +127,7 @@
       "metadata": {
         "id": "B6ojEvRgJ7OC"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +162,7 @@
       "metadata": {
         "id": "qOyU15H3tov7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +195,35 @@
       "metadata": {
         "id": "acB4OJyb7Uiw"
       },
-      "execution_count": 6,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def html_prechunked_create_and_upsert_vectors(index, path, chapter_metadata, embeddings):\n",
+        "    for j, file in enumerate(os.listdir(path)):\n",
+        "      with open(os.path.join(path, file), encoding='utf-8') as f:\n",
+        "        text = f.read()\n",
+        "      chunks = text.split('\\n-----\\n')\n",
+        "      print(f'On Chapter {j}')\n",
+        "      ids = [str(uuid4()) for _ in range(len(chunks))]\n",
+        "      metadata = chapter_metadata[j]\n",
+        "      embeds = embeddings.embed_documents([chunk for chunk in chunks])\n",
+        "      record_metadatas = [{\"chunk\": j,\n",
+        "                             \"text\": chunk,\n",
+        "                             **metadata}\n",
+        "                              for (j, chunk) in enumerate(chunks)]\n",
+        "      try:\n",
+        "        index.upsert(vectors=zip(ids, embeds, record_metadatas))\n",
+        "      except PineconeApiException:\n",
+        "        print('Pinecone exception occured. Chunk is probably bigger than 2MB! Ignoring.')\n",
+        "      #index.upsert(vectors=zip(ids, embeds, record_metadatas))"
+      ],
+      "metadata": {
+        "id": "G5iiUsEne_T2"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +262,7 @@
       "metadata": {
         "id": "0eGMOtWJZvyo"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +283,7 @@
       "metadata": {
         "id": "bfLN1SomhnZ5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,8 +323,8 @@
         "    vector = [{\n",
         "      \"id\":str(uuid4()),\n",
         "      \"values\": embeds[0],\n",
-        "      \"metadata\": {\"topic\": f\"Data about the {family} family\"}\n",
-        "      \"text\": full_text,\n",
+        "      \"metadata\": {\"topic\": f\"Data about the {family} family\",\n",
+        "                   \"text\": full_text}\n",
         "    }]\n",
         "\n",
         "    index.upsert(vector)\n"
@@ -303,7 +332,7 @@
       "metadata": {
         "id": "SoBlxly8aDkz"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -327,15 +356,15 @@
         "  elif split_type == 'html':\n",
         "    headers = [(\"h2\", \"topic\"), (\"h5\", \"introduction\")]\n",
         "    splitter = HTMLHeaderTextSplitter(headers)\n",
-        "  elif split_type == 'json':\n",
-        "    return None\n",
+        "  else:\n",
+        "    splitter = None\n",
         "\n",
         "  return splitter\n"
       ],
       "metadata": {
         "id": "1qKaLimIBis1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,32 +390,37 @@
         "\n",
         "  if upsert_metadata:\n",
         "    upsert_wals_data(index, embeddings)\n",
-        "    upsert_language_data(index, embeddings)\n",
+        "    #upsert_language_data(index, embeddings)\n",
         "\n",
         "\n",
         "  if upsert_chapter_data:\n",
         "    chapter_metadata = load_chapter_metadata('/content/drive/MyDrive/WALS/chapter_metadata.csv')\n",
-        "    splitter = get_splitter(split_type)\n",
         "    if split_type == 'text':\n",
+        "      splitter = get_splitter(split_type)\n",
         "      text_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/', chapter_metadata, splitter, embeddings, subdirectory='chapters_html')\n",
         "    elif split_type == 'html':\n",
+        "      splitter = get_splitter(split_type)\n",
         "      html_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_html', chapter_metadata, splitter, embeddings)\n",
         "    elif split_type == 'json':\n",
         "      json_splitter_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/chapters_json', chapter_metadata, embeddings)\n",
+        "    elif split_type == 'html_prechunk':\n",
+        "      html_prechunked_create_and_upsert_vectors(index, '/content/drive/MyDrive/WALS/html_chunks', chapter_metadata, embeddings)\n",
         "\n",
         "  return index, embeddings"
       ],
       "metadata": {
         "id": "3Ic1-pR_6BFL"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def setup_agent():\n",
-        "  index, embedding = setup_vectorstore()\n",
+        "  index, embeddings = setup_vectorstore(make_new_index=False,\n",
+        "                                      upsert_metadata=False,\n",
+        "                                      upsert_chapter_data=False)\n",
         "  vectorstore = LangChainPinecone(index, embeddings, text_key='text')\n",
         "\n",
         "  llm = LangChainChatOpenAI(\n",
@@ -404,7 +438,7 @@
       "metadata": {
         "id": "nmppztFPEbkg"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -413,7 +447,7 @@
         "class WALS():\n",
         "\n",
         "  def __init__(self):\n",
-        "    self.agent = setup_agent()\n",
+        "    self.agent = self.setup_agent()\n",
         "\n",
         "  def TalkToWALS(self, query):\n",
         "    preamble = \"\"\"You are an expert on the World Atlas of Language Structures, also called WALS.\n",
@@ -421,34 +455,88 @@
         "    they mean Chapter 12 in WALS, if they ask about verbal morphology they really mean what does\n",
         "    WALS say about verbal morphology. Act like a helpful librarian who knows about WALS.\"\"\"\n",
         "    response = self.agent.invoke('\\n'.join([preamble, query]))\n",
-        "    print(response['result'])\n"
+        "    print(response['result'])\n",
+        "\n",
+        "  def setup_agent(self):\n",
+        "    index, embeddings = setup_vectorstore(make_new_index=False,\n",
+        "                                        upsert_metadata=False,\n",
+        "                                        upsert_chapter_data=False)\n",
+        "    vectorstore = LangChainPinecone(index, embeddings, text_key='text')\n",
+        "\n",
+        "    llm = LangChainChatOpenAI(\n",
+        "        openai_api_key=userdata.get('OPENAI_KEY'),\n",
+        "        model_name='gpt-3.5-turbo',\n",
+        "        temperature=0.9\n",
+        "    )\n",
+        "\n",
+        "    agent = RetrievalQA.from_chain_type(\n",
+        "        llm=llm,\n",
+        "        retriever=vectorstore.as_retriever()\n",
+        "    )\n",
+        "    return agent\n"
       ],
       "metadata": {
         "id": "MtrTSBqwFFDt"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "wals = WALS()\n",
-        "wals.TalkToWALS('Which chapter is about velar nasals?')"
+        "index, embeddings = setup_vectorstore(make_new_index=False,\n",
+        "                  upsert_metadata=False,\n",
+        "                  upsert_chapter_data=False,\n",
+        "                  split_type='html_prechunk')"
+      ],
+      "metadata": {
+        "id": "SnFPbZyDlGh4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wals = WALS()\n"
       ],
       "metadata": {
         "id": "PPVmJN1yhoZC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cf49e918-52ed-4599-c3f5-a2eda0a73284"
+        "outputId": "37e77270-176a-466c-afd2-1eb584fb21bf"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Chapter 10 of the World Atlas of Language Structures (WALS) is about the velar nasal. The specific title of Chapter 10 is \"The Velar Nasal,\" written by Gregory D.S. Anderson, focusing on this particular phonological feature.\n"
+            "Ian Maddieson is a prominent linguist who has contributed to several chapters in the World Atlas of Language Structures (WALS). He is known for his work in phonetics and phonology. Specifically, Maddieson was responsible for writing Chapter 138 in WALS, which focuses on the phonological shape of a lexical item expressing a specific concept related to a specific agricultural product. If you have any more specific questions regarding Ian Maddieson's contributions or any other chapters in WALS, feel free to ask!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wals.TalkToWALS('Give me a summary of Chapter 145')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oLWHny85vAHP",
+        "outputId": "fa855dc0-c32d-4b59-c03b-38f758519f9c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I'm sorry, but I do not have information on Chapter 145 of the World Atlas of Language Structures (WALS).\n"
           ]
         }
       ]
