--- a/TalkingToWALS.ipynb
+++ b/TalkingToWALS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaXTtelO1PR2cIWQi+VtLm",
+      "authorship_tag": "ABX9TyNI6tc6BT2mxz0n2AEtsYy0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,25 +48,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "id": "j-vmVrb3CDvC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af665e2d-231e-45dc-af00-dbe8d024ddcd"
+        "outputId": "cb755344-569a-484a-a282-53ad0a85a1ad"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Chapter 21 of the World Atlas of Language Structures (WALS) is titled \"Fusion of Selected Inflectional Formatives\" and is authored by Balthasar Bickel & Johanna Nichols. This chapter delves into the fusion of inflectional formative elements in languages, particularly focusing on how certain morphemes are combined. It provides insights into how languages structure and combine these particular elements, shedding light on linguistic diversity in this area.\n"
+            "Chapter 1 of the World Atlas of Language Structures (WALS) covers the feature of \"Consonant Inventories\" in languages. It provides information on the number and types of consonants that languages make use of, ranging from smaller inventories to larger ones. The chapter helps to understand the variety and distribution of consonant sounds across languages worldwide.\n"
           ]
         }
       ],
       "source": [
-        "agent.TalkToWALS('Give me a summary of Chapter 21')"
+        "agent.TalkToWALS('Summarize Chapter 1')"
       ]
     }
   ]
