Added 'interact' method to WALS agent

--- a/HidingBehindWALS.ipynb
+++ b/HidingBehindWALS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Oyn2Hp-XhDxIZqoXLYhLRtlvvYzT1Wm9",
-      "authorship_tag": "ABX9TyPr3d/HYFwEg/lSVrLbQvIP",
+      "authorship_tag": "ABX9TyNk3qEW9CbF+Z+q+7Af7JmP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,8 @@
         "    tiktoken \\\n",
         "    pinecone-client \\\n",
         "    langchain-openai \\\n",
-        "    langchain-pinecone"
+        "    langchain-pinecone \\\n",
+        "    gradio"
       ]
     },
     {
@@ -77,9 +78,11 @@
         "import json\n",
         "from uuid import uuid4\n",
         "\n",
+        "from google.colab import userdata, drive\n",
+        "\n",
         "import tiktoken\n",
         "\n",
-        "from google.colab import userdata, drive\n",
+        "import gradio as gr\n",
         "\n",
         "from pinecone import Pinecone, PodSpec, PineconeApiException\n",
         "\n",
@@ -448,12 +451,14 @@
         "\n",
         "  def __init__(self):\n",
         "    self.agent = self.setup_agent()\n",
+        "    self.preamble = \"\"\"\n",
+        "    You are an expert on the World Atlas of Language Structures, also called WALS.\n",
+        "    Assume that any questions you are asked are referring to WALS, so if someone says Chapter 12\n",
+        "    they mean Chapter 12 in WALS, if they ask about verbal morphology they really mean what does\n",
+        "    WALS say about verbal morphology. Act like a helpful librarian who knows about WALS.\n",
+        "    \"\"\"\n",
         "\n",
         "  def TalkToWALS(self, query):\n",
-        "    preamble = \"\"\"You are an expert on the World Atlas of Language Structures, also called WALS.\n",
-        "    Assume that any questions you are asked are referring to WALS, so if someone says Chatper 12\n",
-        "    they mean Chapter 12 in WALS, if they ask about verbal morphology they really mean what does\n",
-        "    WALS say about verbal morphology. Act like a helpful librarian who knows about WALS.\"\"\"\n",
         "    response = self.agent.invoke('\\n'.join([preamble, query]))\n",
         "    print(response['result'])\n",
         "\n",
@@ -473,7 +478,11 @@
         "        llm=llm,\n",
         "        retriever=vectorstore.as_retriever()\n",
         "    )\n",
-        "    return agent\n"
+        "    return agent\n",
+        "\n",
+        "  def interact(message, history):\n",
+        "    response = self.agent.invoke('\\n'.join([self.preamble, message]))\n",
+        "    return response\n"
       ],
       "metadata": {
         "id": "MtrTSBqwFFDt"
