Add Gradio interface

--- a/TalkingToWALS.ipynb
+++ b/TalkingToWALS.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPWSbYRp511JNsdgbd5cEl3",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -23,11 +7,16 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jsmackie/TalkingToWALS/blob/mainline/TalkingToWALS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jsmackie/TalkingToWALS/blob/flask_app/TalkingToWALS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7SKJgHx3NdzU"
+      },
+      "outputs": [],
       "source": [
         "!pip install -qU \\\n",
         "    cohere \\\n",
@@ -35,61 +24,79 @@
         "    tiktoken \\\n",
         "    pinecone-client \\\n",
         "    langchain-openai \\\n",
-        "    langchain-pinecone"
-      ],
-      "metadata": {
-        "id": "7SKJgHx3NdzU"
-      },
-      "execution_count": 1,
-      "outputs": []
+        "    langchain-pinecone \\\n",
+        "    gradio"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py\n"
-      ],
-      "metadata": {
-        "id": "pVn116QwLPpO"
-      },
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "7J6pKZSz0uyZ"
+      },
+      "outputs": [],
+      "source": [
+        "import gradio as gr\n",
+        "from google.colab import userdata"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import HidingBehindWALS as wals\n",
-        "agent = wals.TalkToWALS()"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "iDxQcr7zOkuo"
+        "id": "IuSvQn9zLvWN"
       },
-      "execution_count": 12,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/wals.py -O wals.py\n",
+        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py\n",
+        "import wals"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
-        "id": "j-vmVrb3CDvC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e598a523-fc5c-4432-a200-b544c6f160a1"
+        "id": "IDaphgUF1fSt"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "In the World Atlas of Language Structures (WALS), Chapter 10 titled \"The Velar Nasal\" authored by Gregory D.S. Anderson, it is noted that most languages in the sample for this study have non-iconic reciprocal constructions. This information provides insight into the prevalence of certain linguistic features in African languages as represented in the WALS sample.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "query = 'Tell me something interesting about African languages in WALS'\n",
-        "response = agent.invoke(query)\n",
-        "print(response['result'])"
+        "agent = wals.WALSBuilder(userdata.get('OPENAI_KEY'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KFDK2T8nHBZj"
+      },
+      "outputs": [],
+      "source": [
+        "gr.ChatInterface(agent.interact,\n",
+        "                 textbox=gr.Textbox(placeholder=\"Ask me about the World Atlas of Language Structures\"),\n",
+        "                 title=\"Talking To WALS\",\n",
+        "                 description=\"Ask me about the World Atlas of Language Structures\",\n",
+        "                 examples=[\"What is Chapter 1 about?\",\n",
+        "                           \"Which chapters did Ian Maddieson write?\",\n",
+        "                           \"What does WALS say about nominal morphology?\"],\n",
+        "                 ).launch(agent.interact, debug=True)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOJswxsRxz/9ZdUf9kKGsOK",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
