Add Gradio interface

--- a/TalkingToWALS.ipynb
+++ b/TalkingToWALS.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNI6tc6BT2mxz0n2AEtsYy0",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,6 +12,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7SKJgHx3NdzU"
+      },
+      "outputs": [],
       "source": [
         "!pip install -qU \\\n",
         "    cohere \\\n",
@@ -35,39 +24,79 @@
         "    tiktoken \\\n",
         "    pinecone-client \\\n",
         "    langchain-openai \\\n",
-        "    langchain-pinecone\n",
-        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py\n",
-        "import HidingBehindWALS as wals\n",
-        "agent = wals.WALS()"
-      ],
-      "metadata": {
-        "id": "7SKJgHx3NdzU"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    langchain-pinecone \\\n",
+        "    gradio"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
-        "id": "j-vmVrb3CDvC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cb755344-569a-484a-a282-53ad0a85a1ad"
+        "id": "7J6pKZSz0uyZ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Chapter 1 of the World Atlas of Language Structures (WALS) covers the feature of \"Consonant Inventories\" in languages. It provides information on the number and types of consonants that languages make use of, ranging from smaller inventories to larger ones. The chapter helps to understand the variety and distribution of consonant sounds across languages worldwide.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "agent.TalkToWALS('Summarize Chapter 1')"
+        "import gradio as gr\n",
+        "from google.colab import userdata"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IuSvQn9zLvWN"
+      },
+      "outputs": [],
+      "source": [
+        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/wals.py -O wals.py\n",
+        "!wget https://raw.githubusercontent.com/jsmackie/TalkingToWALS/mainline/HidingBehindWALS.py -O HidingBehindWALS.py\n",
+        "import wals"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "IDaphgUF1fSt"
+      },
+      "outputs": [],
+      "source": [
+        "agent = wals.WALSBuilder(userdata.get('OPENAI_KEY'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KFDK2T8nHBZj"
+      },
+      "outputs": [],
+      "source": [
+        "gr.ChatInterface(agent.interact,\n",
+        "                 textbox=gr.Textbox(placeholder=\"Ask me about the World Atlas of Language Structures\"),\n",
+        "                 title=\"Talking To WALS\",\n",
+        "                 description=\"Ask me about the World Atlas of Language Structures\",\n",
+        "                 examples=[\"What is Chapter 1 about?\",\n",
+        "                           \"Which chapters did Ian Maddieson write?\",\n",
+        "                           \"What does WALS say about nominal morphology?\"],\n",
+        "                 ).launch(agent.interact, debug=True)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOJswxsRxz/9ZdUf9kKGsOK",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
